# TheBot-reloaded

./: .gitignore  .gitmodules  Makefile  README.md  connection copy.cpp  docker-compose.yml  example_config.cfg  test.ts
.github/workflows/: rust-clippy.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/compiler_server/: Dockerfile  compiler.ts  compilers.json  jail.ts  run.ts  server.ts  test.ts
apps/discord_client/: index.js  package.json
apps/docker_proxy/: Dockerfile  docker.ts  router.ts  server.ts
apps/server/: .dockerignore  Dockerfile  Makefile  config.ts  config_gen.ts  loadable.ts  logger.ts  protocol.ts  server.ts  terminal.ts  test.sh  utils.ts  write_version.ts
apps/server/api/: alice.ts  animals.ts  animals_test.ts  chatbot.ts  chatgpt.ts  compiler.ts  docker.ts  download.ts  furry.ts  furry_test.ts  image.ts  meme.ts  mikki.ts  untis.ts
apps/server/api/anime/: anime.ts
apps/server/api/version/: v1.ts
apps/server/backup/: backup_provider.ts
apps/server/command/: command.ts  command_event_interface.ts  permission.ts  splitter.ts
apps/server/command/commands/: animals.ts  anime.ts  compiler.ts  docker.ts  fun.ts  (+7 more)
apps/server/config/: config.ts  config_gen.ts  keystore.ts
apps/server/event/: event.ts  event_handler.ts
apps/server/features/: chatbot.ts  chatbotv2.ts  hello.ts
apps/server/utils/: assert.ts  csv.ts  executer.ts  file.ts  help.ts  response.ts  time.ts  tmp.ts
apps/telegram_client/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  bot_server_client  gm2.json  index.js  main.cpp  mime  package.json
apps/telegram_client/tasks/: clean.json  compile.json  dep_bsc.json  dep_mime.json  dep_tgbot.json  link.json
apps/whatsapp_client/: Dockerfile  index.js  log.js  package.json
bot_server_client/: client.js
chatbot/: Dockerfile  start.sh
client/: client.js  package.json  protocol.js
cross-deno/: do_it.sh
data/: permissions.json
deno/: Dockerfile  Makefile  install.sh
discord_client/: Dockerfile  index.js  log.js  package.json
docker_proxy/: Dockerfile  docker.ts  server.ts
libs/anime/: test.ts
libs/anime/provider/: gogoanime.ts
libs/bot_internal_commands/: default_commands.js  index.js  package.json
libs/bot_server_api/: mod.ts  test.ts  v1.ts
libs/bot_server_client/: client.js  index.js  package.json  protocol.js
libs/bot_server_client_cpp/: .clang-format  CMakeLists.txt  fmt.sh  gm2.json
libs/bot_server_client_cpp/lib/include/: connection.h  protocol.h  socket.h
libs/bot_server_client_cpp/lib/src/: connection.cpp  helper.cpp  protocol.cpp  socket.cpp
libs/bot_server_client_cpp/tasks/: compile.json  link.json
libs/bot_server_client_cpp/test/: main.cpp  test.cpp
libs/bot_server_client_rs/: Cargo.toml  README.md  fmt.sh
libs/bot_server_client_rs/src/: helper.rs
libs/bot_server_client_rs/src/client/: connection.rs  protocol.rs
libs/bot_server_client_rs/test_lib/: Cargo.toml
libs/bot_server_client_rs/test_lib/src/: main.rs
libs/mikki/: client.ts  helper.ts  mod.ts  test.ts
libs/mime/: CMakeLists.txt  gen.ts  gm2.json  mime.cpp  mime.h
libs/mime/tasks/: compile.json  link.json
libs/simple_router/: mod.ts  router.ts
server/: Dockerfile  config.ts  config_gen.ts  loadable.ts  logger.ts  permissions.json  protocol.ts  server.ts  terminal.ts  utils.ts
server/api/: animals.ts  animals_test.ts  docker.ts  download.ts
server/command/: command.ts  command_event_interface.ts  permission.ts
server/command/commands/: animals.ts  docker.ts  fun.ts  util.ts
tools/: mikki_db_fix_import.ts  remove_slash_commands.ts
whatsapp_client/: Dockerfile  index.js  log.js  package.json  server.js
(+6 files in other folders)
