[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot_server_client = "1.1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
spinoff = "0.5.3"
inquire = "0.3.0"